Fixed not loading on mobile problem.

--- a/globalstyle.css
+++ b/globalstyle.css
@@ -3,3 +3,13 @@
     max-width: 1256px;
     margin: auto;
 }
+
+body{
+    background-image: url("/Assets/background.jpg");
+    background-repeat: repeat-y;
+    background-size: cover;
+}
+
+.mapContainer{
+    box-shadow: 10px 10px 5px #888888;
+}
